contact page completed

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,6 +2,9 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    /* background: linear-gradient(180deg, #040641 0%, #010106 100%); */
-    /* background: linear-gradient(180deg,#040641 0%, #010106 100%); */
+    
 }
+
+/* .div{
+    background: linear-gradient(180deg, #040641 0%, #010106 100%);
+} */
