--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -1,7 +1,7 @@
 .cards-main-container{
-    width: 100%;
-    height: 100%;
-
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(180deg, #040641 0%, #010106 100%);
 }
 
 .cards-main-heading{
