--- a/src/pages/Page1.css
+++ b/src/pages/Page1.css
@@ -56,3 +56,30 @@
 .swipeup{
     color:#ffffff
 }
+
+
+@media screen and (max-width:480px){
+
+    .ran{
+        font-size: 70px;
+    }
+
+    .text{
+        font-size: 25px;
+    }
+
+    .slogens{
+        margin-top: 2rem;
+    }
+}
+
+@media (min-width:481px) and (max-width:768px){
+
+    .ran{
+        font-size: 100px;
+    }
+
+    .text{
+        font-size: 29px;
+    }
+}
