--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -1,6 +1,6 @@
 .cards-main-container{
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background: linear-gradient(180deg, #040641 0%, #010106 100%);
 }
 
@@ -14,6 +14,7 @@
     letter-spacing: 0.48px;
     max-width: 80%;
     margin: auto;
+    
     
 }
 
@@ -33,8 +34,12 @@
     flex-shrink: 0;
     border-radius: 19px;
     background: #D9D9D9;
-    margin:1rem
+    margin: 1rem;
+    margin-bottom: 2rem;
 }
+
+
+
 
 .cards-main-box-2{
     width: 305px;
@@ -43,6 +48,7 @@
     border-radius: 19px;
     background: #D9D9D9;
     margin: 1rem;
+    margin-bottom: 2rem;
 }
 .cards-main-box-3{
     width: 305px;
@@ -51,8 +57,54 @@
     border-radius: 19px;
     background: #D9D9D9;
     margin : 1rem;
-
+    margin-bottom: 2rem;
 }
+
+.cards-main-box-1,
+.cards-main-box-2,
+.cards-main-box-3 {
+    position: relative;
+}
+
+.hover-content {
+    position: absolute;
+    bottom: -50%;
+    left: 0;
+    width: 100%;
+    height: 35%;
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: 0.3s;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    transition: bottom 0.8s ease;
+    display: none;
+}
+
+.cards-main-box-1:hover .hover-content,
+.cards-main-box-2:hover .hover-content,
+.cards-main-box-3:hover .hover-content {
+    bottom: 0;
+    display: block;
+}
+
+.hover-heading{
+    color: white;
+    font-size: xx-large;
+    margin-top: 3.5rem;
+    margin-left: 1rem;
+}
+
+
+/* .image-container {
+    position: relative;
+    width: 300px;
+    height: 200px; 
+    background: url('') no-repeat center center;
+    background-size: cover;
+    overflow: hidden;
+} */
+
 
 @media screen and (max-width:550px){
     .cards-main-container{
