--- a/src/components/Section3.css
+++ b/src/components/Section3.css
@@ -6,7 +6,7 @@
 
 .section3{ 
     background: linear-gradient(180deg, #040641 0%, #010106 100%);
-    height: 100vh;
+    height: 100%;
     width: 100vw;
 }
 
@@ -69,6 +69,7 @@
     border-radius: 61px;
     background : #A09C9C;
     text-align: center;
+    margin-bottom: 2rem;
   }
   
 
