--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -53,6 +53,19 @@
     /* margin: 0 100%; */
 }
 
+
+
+.active {
+    color: inherit; 
+    text-decoration: none; 
+    font-weight: inherit; 
+    
+}
+
+Navlink{
+    all:unset;
+}
+
 @media screen and (max-width:480px){
     .navbar{
         display: inline;
